bin_PROGRAMS = bunny

bunnydir = $(includedir)

bunny_SOURCES = main.cpp game.cpp Camera.cpp GLManager.cpp matrices.cpp tiny_obj_loader.cpp stb_image.cpp Vector3D.cpp glad.c ECS/ECS.cpp ECS/BezierComponent.cpp ECS/ColliderComponent.cpp

bunny_HEADERS = Camera.h game.h GLManager.h Vector3D.h callbacks.h AIComponent.h BezierComponent.h Components.h KeyboardController.h AutoKillComponent.h ColliderComponent.h ModelComponent.h ECS.h TransformComponent.h

bunny_CPPFLAGS = $(CPPFLAGS)
bunny_LDFLAGS = $(LIBS) $(LDFLAGS)
bunny_LDADD = $(LIBS) $(LDFLAGS)
bin_PROGRAMS
